# Tally

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  main.py  models.py  schemas.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: db.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 30dd799902ad_initial_schema_links_and_clicks.py
backend/tests/: conftest.py  test_links.py
migrations/: env.py
tests/: conftest.py  test_links.py
